# CMakeTemplate

CEF/: CMakeLists.txt  CMakePresets.json
CEF/1.SimpleApp/: CMakeLists.txt
CEF/1.SimpleApp/src/App/src/: CEFPreset.cpp  CEFPreset.hpp  main.cpp
CEF/1.SimpleApp/src/Runtime/src/: main.cpp
CEF/2.NativeWindowApp/: CMakeLists.txt  CMakePresets.json
CEF/2.NativeWindowApp/cmake/vcpkg/: vcpkg.json
CEF/2.NativeWindowApp/src/App/: CMakeLists.txt
CEF/2.NativeWindowApp/src/App/src/: MyApp.cpp  MyApp.hpp  MyClient.hpp  MyPreset.hpp  MyWindowDelegate.cpp  MyWindowDelegate.hpp  main.cpp
CEF/3.SingleInstanceApp/: CMakeLists.txt
CEF/3.SingleInstanceApp/cmake/vcpkg/: vcpkg.json
CEF/3.SingleInstanceApp/src/App/: CMakeLists.txt
CEF/3.SingleInstanceApp/src/App/src/: MyApp.cpp  MyApp.hpp  MyClient.cpp  MyPreset.cpp  main.cpp
CEF/NativeWndApp/: .clangd  CMakeLists.txt
CEF/NativeWndApp/cmake/: ZQFCEFSettings.cmake
CEF/NativeWndApp/src/: CMakeLists.txt
CEF/NativeWndApp/src/App/: CMakeLists.txt
CEF/NativeWndApp/src/App/src/: AppMain.cpp  AppMain.hpp  MyApp.cpp  MyClient.cpp  MyClient.hpp
CEF/NativeWndApp/src/App/src/Delegate/: MyBrowserViewDelegate.cpp  MyBrowserViewDelegate.hpp  MyWndDelegate.cpp  MyWndDelegate.hpp
CEF/OSRApp/: CMakeLists.txt  CMakePresets.json
CEF/OSRApp/cmake/: ZQFCEFSettings.cmake
CEF/OSRApp/src/App/src/: AppMain.cpp  MyApp.cpp  MyClient.cpp  MyClient.hpp
CEF/OSRApp/src/App/src/Platform/Windows/: main.cpp
CEF/OSRApp/src/App/src/Platform/macOS/: main.mm
CEF/OSRApp/src/App/src/Renderer/: SdlRenderer.cpp  SdlRenderer.hpp
CEF/OSRApp_D3D11/: .clangd
CEF/OSRApp_D3D11/src/: CMakeLists.txt
CEF/OSRApp_D3D11/src/App/src/: MyApp.cpp  MyApp.hpp  MyClient.hpp
CEF/OSRApp_D3D11/src/App/src/Platform/macOS/: main.mm
CEF/OSRApp_D3D11/src/App/src/Renderer/: IRenderer.hpp  SdlRenderer.cpp  SdlRenderer.hpp
CEF/OSRApp_Software/: CMakePresets.json
CEF/OSRApp_Software/src/App/: CMakeLists.txt
CEF/OSRApp_Software/src/App/src/: AppMain.cpp  AppMain.hpp  MyClient.cpp
CEF/OSRApp_Software/src/App/src/Platform/Linux/: main.cpp
CEF/OSRApp_Software/src/App/src/Renderer/: IRenderer.hpp  SdlRenderer.cpp
CEF/OSRApp_Software/src/Runtime/: CMakeLists.txt
CEF/OSRApp_Software/src/Runtime/src/: main.cpp
CEF/SimpleApp/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  vcpkg.json
CEF/SimpleApp/cmake/: ZQFCEFSettings.cmake  ZQF_VCPKG.cmake
CEF/SimpleApp/src/: CMakeLists.txt
CEF/SimpleApp/src/App/: CMakeLists.txt
CEF/SimpleApp/src/App/src/: AppMain.cpp  CEFPreset.mm  MyApp.cpp  MyClient.cpp  MyClient.hpp  Preboot.cpp  Preboot.hpp  main.cpp
CEF/SimpleApp/src/App/src/Platform/macOS/: main.mm
CEF/SimpleApp/src/App/src/linux/: main.cpp
CEF/SimpleApp/src/App/src/mac/: main.mm
CEF/SimpleApp/src/App/src/win/: main.cpp
CEF/SimpleApp/src/Runtime/: CMakeLists.txt
CEF/cmake/: ZQFCEFSettings.cmake
CEF/src/: CMakeLists.txt  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler.h
CEF/src/cef_subprocess/: CMakeLists.txt  main.cpp
CEF/src/cef_test/: CMakeLists.txt  cefsimple_linux.cc  cefsimple_win.cc  simple_app.cc  simple_app.h  simple_handler.cc  simple_handler_linux.cc  simple_handler_win.cc
CEF/src/linux/: CEFRuntime.cpp  cefsimple.cc  simple_handler.cc
CEF/src/mac/: CEFRuntime.cpp
CEF/src/win/: CEFRuntime.cpp  cefsimple.cc  simple_handler.cc
Console/: CMakeLists.txt  CMakePresets.json
Console/src/: main.cpp
OverlayPorts/: CMakeLists.txt  CMakePresets.json  vcpkg.json
OverlayPorts/cmake/ports/zxjson/: portfile.cmake  usage  vcpkg.json
OverlayPorts/cmake/triplets/: x64-windows-custom.cmake
OverlayPorts/src/: main.cpp
PkgWith/: .gitignore  CMakeLists.txt  CMakeMycfg.cmake
PkgWith/cmake/: ZQFPackages.cmake
PkgWith/src/: main.cpp
Presets/: .gitignore  main.py  pyproject.toml
Presets/src/cmake/presets/: macos-clang-x64.json
Qt/: CMakeLists.txt  CMakeMycfg.cmake  CMakePresets.json
Qt/cmake/: PersonalSettings.cmake
Qt/src/: main.cpp
VCPKG/CustomRegistry/: CMakeLists.txt
VCPKG/CustomRegistry/src/: main.cpp
VCPKG/CustomTriplets/: CMakeLists.txt  CMakePresets.json  vcpkg.json
VCPKG/CustomTriplets/cmake/triplets/: x64-windows-custom.cmake
VCPKG/CustomTriplets/src/: main.cpp
VCPKG/OverlayPorts/: CMakeLists.txt  vcpkg.json
VCPKG/OverlayPorts/cmake/ports/nativefiledialog-extended/: portfile.cmake
VCPKG/OverlayPorts/src/: main.cpp
VCPKG/VersionControl/: CMakeLists.txt  CMakePresets.json  vcpkg.json
VCPKG/VersionControl/cmake/ports/boost-modular-build-helper/: boost-modular-build.cmake
VCPKG/VersionControl/src/: main.cpp
WebView2/Material/: CMakeLists.txt  CMakePresets.json  vcpkg.json
WebView2/Material/src/: main.cpp
Win32/: CMakeLists.txt  CMakePresets.json
Win32/src/: main.cpp
Win32DLL/: CMakeLists.txt
Win32DLL/src/: dllmain.cpp
